Question 10 - add feature added to code

--- a/views/new_bookmark.erb
+++ b/views/new_bookmark.erb
@@ -4,11 +4,12 @@
 </head>
   <body style="background-color: blue; text-align: center; font-size:40px; color:white">
     <hr width="50%"></hr>
-    <h1>Bookmark Manager!</h1>
+    <h2>Add New Bookmark!</h2>
     <hr width="50%"></hr>
     <div style="margin-right: 215px; margin-left: 215px; background-color: blue">
-      <form action="/choice" method="post">
-        <button name="bookmarks" type="submit"</button <h2>See bookmarks</h2>
+      <form action="/bookmark_added" method="post">
+        URL <input type="url" name="URL">
+        <button name="Add" type="submit"</button <h2>Add</h2>>
       </form>
     </div>
   </body>
