--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -13,5 +13,10 @@
     <% end %>
     </ul>
     </div>
+    <div style="margin-right: 215px; margin-left: 215px; background-color: blue">
+      <form action="/add_bookmark" method="post">
+        <button name="add bookmark" type="submit"</button <h2>add bookmark</h2>>
+      </form>
+    </div>
   </body>
 </html>
