Feature added for title with embedded URL

--- a/views/new_bookmark.erb
+++ b/views/new_bookmark.erb
@@ -8,6 +8,7 @@
     <hr width="50%"></hr>
     <div style="margin-right: 215px; margin-left: 215px; background-color: blue">
       <form action="/bookmark_added" method="post">
+        TITLE <input type="text" name="TITLE">
         URL <input type="url" name="URL">
         <button name="Add" type="submit"</button <h2>Add</h2>>
       </form>
