--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -2,18 +2,21 @@
 <head>
   <title>Bookmark Manager</title>
 </head>
-  <body style="background-color: blue; text-align: center; font-size:40px; color:white">
+  <body style="text-align: center; font-size:40px">
     <hr width="50%"></hr>
     <h1>Bookmark Manager!</h1>
     <hr width="50%"></hr>
-    <div style="margin-right: 215px; margin-left: 215px; background-color: blue">
+    <div style="margin-right: 215px; margin-left: 215px">
     <ul>
     <% @bookmarks.each do |bookmark| %>
-      <li><%= bookmark %></li>
+      <li><a href="<%= bookmark[:url] %>"><%= bookmark[:title] %></a></li>
     <% end %>
     </ul>
+
+
+
     </div>
-    <div style="margin-right: 215px; margin-left: 215px; background-color: blue">
+    <div style="margin-right: 215px; margin-left: 215px;">
       <form action="/add_bookmark" method="post">
         <button name="add bookmark" type="submit"</button <h2>add bookmark</h2>>
       </form>
